learn basic program flow

--- a/Part.1.E.1.entrance.ipynb
+++ b/Part.1.E.1.entrance.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +140,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(True and False) yields: False\n",
+      "(True and False) yields: True\n",
       "(True and True) yields: True\n",
       "(False and True) yields: False\n",
       "(True or False) yields: True\n",
@@ -280,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "693 is odd.\n"
+      "458 is even.\n"
      ]
     }
    ],
@@ -343,18 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n"
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
      ]
     }
    ],
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "3.1415926"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,20 +598,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83\n",
-      "89\n",
-      "97\n",
-      "101\n",
-      "103\n",
-      "107\n",
-      "109\n"
+      "809\n",
+      "811\n",
+      "821\n",
+      "823\n",
+      "827\n",
+      "829\n",
+      "839\n",
+      "853\n",
+      "857\n",
+      "859\n",
+      "863\n",
+      "877\n",
+      "881\n",
+      "883\n",
+      "887\n",
+      "907\n",
+      "911\n",
+      "919\n",
+      "929\n",
+      "937\n",
+      "941\n",
+      "947\n",
+      "953\n",
+      "967\n",
+      "971\n",
+      "977\n",
+      "983\n",
+      "991\n",
+      "997\n",
+      "1009\n",
+      "1013\n",
+      "1019\n",
+      "1021\n",
+      "1031\n",
+      "1033\n",
+      "1039\n",
+      "1049\n",
+      "1051\n",
+      "1061\n",
+      "1063\n",
+      "1069\n",
+      "1087\n",
+      "1091\n",
+      "1093\n",
+      "1097\n"
      ]
     }
    ],
@@ -627,7 +665,7 @@
     "    else:\n",
     "        return True\n",
     "\n",
-    "for i in range(80, 110):\n",
+    "for i in range(800, 1100):\n",
     "    if is_prime(i):          # 调用 is_prime() 函数，\n",
     "        print(i)            # 如果返回值为 True，则向屏幕输出 i"
    ]
