--- a/Part.1.E.3.controlflow.ipynb
+++ b/Part.1.E.3.controlflow.ipynb
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "372 is even.\n"
+      "124 is even.\n"
      ]
     }
    ],
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Big!\n"
+      "Small!\n"
      ]
     }
    ],
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Small!\n"
+      "Not valid!\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +490,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
+    }
+   ],
    "source": [
     "for n in range(2, 100):\n",
     "    if n == 2:\n",
@@ -1712,9 +1817,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You: 10\t Bot: 10\n",
+      "What's your bet? s\n",
+      "The dice is 7;\n",
+      "DRAW!\n",
+      "\n",
+      "You: 10\t Bot: 10\n",
+      "What's your bet? b\n",
+      "The dice is 6;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 9\t Bot: 11\n",
+      "What's your bet? s\n",
+      "The dice is 9;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 8\t Bot: 12\n",
+      "What's your bet? s\n",
+      "The dice is 12;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 7\t Bot: 13\n",
+      "What's your bet? s\n",
+      "The dice is 10;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 6\t Bot: 14\n",
+      "What's your bet? s\n",
+      "The dice is 10;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 5\t Bot: 15\n",
+      "What's your bet? s\n",
+      "The dice is 11;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 4\t Bot: 16\n",
+      "What's your bet? b\n",
+      "The dice is 6;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 3\t Bot: 17\n",
+      "What's your bet? b\n",
+      "The dice is 8;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 4\t Bot: 16\n",
+      "What's your bet? b\n",
+      "The dice is 3;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 3\t Bot: 17\n",
+      "What's your bet? b\n",
+      "The dice is 11;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 4\t Bot: 16\n",
+      "What's your bet? b\n",
+      "The dice is 11;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 5\t Bot: 15\n",
+      "What's your bet? b\n",
+      "The dice is 8;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 6\t Bot: 14\n",
+      "What's your bet? b\n",
+      "The dice is 7;\n",
+      "DRAW!\n",
+      "\n",
+      "You: 6\t Bot: 14\n",
+      "What's your bet? b\n",
+      "The dice is 11;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 7\t Bot: 13\n",
+      "What's your bet? b\n",
+      "The dice is 12;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 8\t Bot: 12\n",
+      "What's your bet? b\n",
+      "The dice is 10;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 9\t Bot: 11\n",
+      "What's your bet? b\n",
+      "The dice is 5;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 8\t Bot: 12\n",
+      "What's your bet? b\n",
+      "The dice is 6;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 7\t Bot: 13\n",
+      "What's your bet? b\n",
+      "The dice is 8;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 8\t Bot: 12\n",
+      "What's your bet? b\n",
+      "The dice is 4;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 7\t Bot: 13\n",
+      "What's your bet? b\n",
+      "The dice is 11;\n",
+      "You WIN!\n",
+      "\n",
+      "You: 8\t Bot: 12\n",
+      "What's your bet? b\n",
+      "The dice is 4;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 7\t Bot: 13\n",
+      "What's your bet? s\n",
+      "The dice is 12;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 6\t Bot: 14\n",
+      "What's your bet? s\n",
+      "The dice is 10;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 5\t Bot: 15\n",
+      "What's your bet? s\n",
+      "The dice is 12;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 4\t Bot: 16\n",
+      "What's your bet? s\n",
+      "The dice is 9;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 3\t Bot: 17\n",
+      "What's your bet? s\n",
+      "The dice is 8;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 2\t Bot: 18\n",
+      "What's your bet? b\n",
+      "The dice is 2;\n",
+      "You LOST!\n",
+      "\n",
+      "You: 1\t Bot: 19\n",
+      "What's your bet? b\n",
+      "The dice is 6;\n",
+      "You LOST!\n",
+      "\n",
+      "Woops, you've LOST ALL, and game over!\n",
+      "You've played 30 rounds.\n",
+      "\n",
+      "You have 0 coins now.\n",
+      "Bye!\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "\n",
@@ -1768,6 +2035,13 @@
    "source": [
     "## 总结"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
